--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ subtitle: TiDB、flink、kafka、rocketmq etc
 description: 专注于互联网领域开发：架构设计，大数据，分布式存储，分布式计算等
 keywords: null
 author: aliuge0608
-language: ZH_CN
+language: zh-CN
 timezone: Asia/Shanghai
-url: http://www.qinyadan.com
+url: http://liuzm.github.io
 permalink: ':year/:month/:day/:title/'
 permalink_defaults: null
 pretty_urls:
