--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: aliuge0608
 subtitle: TiDB、flink、kafka、rocketmq etc
 description: 专注于互联网领域开发：架构设计，大数据，分布式存储，分布式计算等
-keywords: null
+keywords: "flink、TiDB、chatGPT"
 author: aliuge0608
 language: zh-CN
 timezone: Asia/Shanghai
