--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ keywords: "flink、TiDB、chatGPT"
 author: aliuge0608
 language: zh-CN
 timezone: Asia/Shanghai
-url: http://liuzm.github.io
+url: http://www.qinyadan.com
 permalink: ':year/:month/:day/:title/'
 permalink_defaults: null
 pretty_urls:
