--- a/_config.post.yml
+++ b/_config.post.yml
@@ -30,24 +30,24 @@ widgets:
     # Email address for the Gravatar
     gravatar:
     # URL or path for the follow button
-    follow_link: 'https://github.com/ppoffice'
+    follow_link: 'https://github.com/liuzm'
     # Links to be shown on the bottom of the profile widget
     social_links:
       Github:
         icon: fab fa-github
-        url: 'https://github.com/ppoffice'
-      Facebook:
-        icon: fab fa-facebook
-        url: 'https://facebook.com'
-      Twitter:
-        icon: fab fa-twitter
-        url: 'https://twitter.com'
-      Dribbble:
-        icon: fab fa-dribbble
-        url: 'https://dribbble.com'
-      RSS:
-        icon: fas fa-rss
-        url: /
+        url: 'https://github.com/liuzm'
+#      Facebook:
+#        icon: fab fa-facebook
+#        url: 'https://facebook.com'
+#      Twitter:
+#        icon: fab fa-twitter
+#        url: 'https://twitter.com'
+#      Dribbble:
+#        icon: fab fa-dribbble
+#        url: 'https://dribbble.com'
+#      RSS:
+#        icon: fas fa-rss
+#        url: /
   # Table of contents widget configurations
   -
     # Where should the widget be placed, left sidebar or right sidebar
