--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -277,7 +277,7 @@ widgets:
         type: links
         # Names and URLs of the sites
         links:
-            AQ数据共享平台（微信搜索公众号）: ""
+            LQ聊技术（微信搜索公众号）: ""
     # Categories widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
@@ -286,7 +286,7 @@ widgets:
     # Recent posts widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: recent_posts
     # Archives widget configurations
     -
@@ -296,7 +296,7 @@ widgets:
     # Tags widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: tags
         # How to order tags. For example 'name' to order by name in ascending order, and '-length' to order by number of posts in each tags in descending order
         order_by: name
