--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+# Site
 title: aliuge0608
 subtitle: TiDB、flink、kafka、rocketmq etc
 description: 专注于互联网领域开发：架构设计，大数据，分布式存储，分布式计算等
@@ -5,12 +6,16 @@ keywords: "flink、TiDB、chatGPT"
 author: aliuge0608
 language: zh-CN
 timezone: Asia/Shanghai
+
+# URL
 url: http://liuzm.github.io
 permalink: ':year/:month/:day/:title/'
 permalink_defaults: null
 pretty_urls:
   trailing_index: true
   trailing_html: true
+
+# Directory
 source_dir: source
 public_dir: public
 tag_dir: tags
@@ -19,6 +24,8 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: ':lang'
 skip_render: null
+
+# Writing
 new_post_name: ':title.md'
 default_layout: post
 titlecase: false
@@ -28,7 +35,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -47,13 +54,19 @@ index_generator:
   path: ''
   per_page: 10
   order_by: '-date'
+
+# Category & Tag
 default_category: uncategorized
 category_map: null
 tag_map: null
 meta_generator: true
+
+# Date / Time format
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 updated_option: mtime
+
+# Pagination
 per_page: 10
 pagination_dir: page
 include: null
