--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -316,7 +316,7 @@ widgets:
    #  Google AdSense unit configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: adsense
         # AdSense client ID
         client_id: 'ca-pub-4952653426015138'
