--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "Qyd-site",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "hexo generate",
@@ -9,18 +9,24 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.1.1"
   },
   "dependencies": {
-    "hexo": "^6.3.0",
+    "bulma-stylus": "0.8.0",
+    "hexo": "^7.1.1",
+    "hexo-algolia": "^1.3.2",
+    "hexo-deployer-git": "^4.0.0",
+    "hexo-filter-github-emojis": "^3.0.5",
     "hexo-generator-archive": "^2.0.0",
-    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.0.0",
-    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-pagination": "^3.0.0",
+    "hexo-renderer-inferno": "^1.0.2",
+    "hexo-renderer-marked": "^6.2.0",
+    "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
-    "hexo-theme-icarus": "^5.2.1"
+    "hexo-tag-embed": "^1.0.0",
+    "hexo-theme-icarus": "^6.0.0"
   }
 }
